--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "asdf",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sjy1410.github.io/WayofRhythm",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
